<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main2Activity"
        android:background="@color/mainBackgroundJti"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appBarLayout"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/toolbarAddTask"
                app:title="@string/new_task"
                android:background="@color/white"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/title"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:boxStrokeColor="@color/black"
                    android:background="@null"
                    app:boxBackgroundColor="@color/white"
                    app:hintTextColor="@color/black">


                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/write_title_here"
                        android:id="@+id/edit_text_title"
                        android:paddingStart="8dp"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:background="@null" />


                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/note"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:boxBackgroundColor="@color/white"
                    app:boxStrokeColor="@color/white"
                    android:background="@null"
                    app:hintTextColor="@color/white">


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text_note"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:gravity="top"
                        android:lines="7"
                        android:hint="@string/make_a_note_here" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:textColor="@color/black"
                    android:text="@string/set_reminder_date_and_time"
                    android:textSize="18sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/set_date"
                    android:clickable="true"
                    android:id="@+id/dateEdt"
                    android:drawablePadding="8dp"
                    android:drawableTint="@color/black"
                    android:focusable="true"
                    android:background="@color/white"
                    android:backgroundTint="@color/white"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textSize="18sp"
                    app:drawableEndCompat="@drawable/ic_date_range_black_24dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:visibility="visible"
                    android:id="@+id/timeInptLay"
                    app:boxBackgroundColor="@color/white"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:hint="@string/set_time"
                        android:clickable="true"
                        android:id="@+id/timeEdt"
                        android:drawablePadding="8dp"
                        android:focusable="true"
                        android:background="@color/white"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:textSize="18sp"
                        app:drawableEndCompat="@drawable/ic_access_time_black_24dp"
                        app:drawableTint="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="horizontal"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="4dp"
                        android:textColor="@color/black"
                        android:text="@string/category"
                        android:textSize="18sp" />

                    <Spinner
                        android:id="@+id/spinnerCategory"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:background="@color/white"
                        android:layout_height="50dp" />

                    <ImageView
                        android:id="@+id/imgAddCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_playlist_add_black_24dp"
                        app:tint="@color/black" />

                </LinearLayout>


                <Button
                    android:id="@+id/btnsave"
                    android:layout_width="match_parent"
                    android:layout_height="65dp"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:textStyle="bold"
                    android:text="@string/save_reminder"
                    android:layout_marginTop="32dp"
                    android:backgroundTint="#1565C0"
                    app:cornerRadius="25dp"
                    android:focusable="true" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>
</layout>